--- a/core/build.gradle
+++ b/core/build.gradle
@@ -7,4 +7,5 @@ dependencies {
     api "com.badlogicgames.gdx:gdx:$gdxVersion"
     api "com.badlogicgames.ashley:ashley:$ashleyVersion"
     api "space.earlygrey:shapedrawer:$shapeDrawerVersion"
+    api "com.esotericsoftware:kryonet:2.22.0-RC1"
 }
